Actualización a Grails 2.4.0