@@ -1,32 +1,35 @@
-grails.server.port.http = 8090
+//grails.server.port.http = 8090
+
 
 grails.servlet.version = "3.0" // Change depending on target container compliance (2.5 or 3.0)
 grails.project.class.dir = "target/classes"
 grails.project.test.class.dir = "target/test-classes"
 grails.project.test.reports.dir = "target/test-reports"
 grails.project.work.dir = "target/work"
-grails.project.target.level = 1.7
-grails.project.source.level = 1.7
+grails.project.target.level = 1.8
+grails.project.source.level = 1.8
 grails.project.war.file = "target/${appName}.war"
 
 grails.project.fork = [
     // configure settings for compilation JVM, note that if you alter the Groovy version forked compilation is required
-    compile: [maxMemory: 256, minMemory: 64, debug: false, maxPerm: 256, daemon:true, source:1.7, target:1.7],
+    //  compile: [maxMemory: 256, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
 
     // configure settings for the test-app JVM, uses the daemon by default
-    test: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, daemon:true, source:1.7],
+    test: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, daemon:true],
     // configure settings for the run-app JVM
-    run: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false, source:1.7],
+    run: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false],
     // configure settings for the run-war JVM
-    war: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false, source:1.7],
+    war: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, forkReserve:false],
     // configure settings for the Console UI JVM
-    console: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256, source:1.7]
+    console: [maxMemory: 768, minMemory: 64, debug: false, maxPerm: 256]
 ]
 
-grails.project.dependency.resolver = "ivy" // or maven -> problems with excludes
+grails.project.dependency.resolver = "ivy"
 grails.project.dependency.resolution = {
     // inherit Grails' default dependencies
     inherits("global") {
+        // specify dependency exclusions here; for example, uncomment this to disable ehcache:
+        // excludes 'ehcache'
         excludes 'bcprov-jdk15', 'bcpg-jdk15', 'bcprov-jdk14', 'bcmail-jdk14'
     }
     log "error" // log level of Ivy resolver, either 'error', 'warn', 'info', 'debug' or 'verbose'
@@ -45,51 +48,50 @@ grails.project.dependency.resolution = {
         //mavenRepo "http://repository.codehaus.org"
         //mavenRepo "http://download.java.net/maven/2/"
         //mavenRepo "http://repository.jboss.com/maven2/"
-
-        dependencies {
-            // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes e.g.
-
-            compile(
-                    'org.votingsystem:votingsystemlibrary:0.2.0',
-                    'org.codehaus.groovy.modules.http-builder:http-builder:0.5.1',
-                    'org.apache.httpcomponents:httpmime:4.2.4',
-                    'org.apache.httpcomponents:httpclient:4.2.4',
-                    'org.bouncycastle:bcprov-jdk16:1.46',
-                    'org.bouncycastle:bcmail-jdk16:1.46',
-                    'org.bouncycastle:bcpg-jdk16:1.46',
-                    'org.bouncycastle:bctsp-jdk16:1.46',
-                    //'gnu.mail:gnumail:1.1.2',
-                    //'gnu.mail:inetlib:1.1.1',
-                    //'org.apache.geronimo.specs:geronimo-javamail_1.4_spec:1.7.1',
-                    'javax.mail:mail:1.4.7',
-            ) {excludes "slf4j-api", "log4j", "commons-logging", "xalan", "xml-apis", "groovy","commons-io",
-                    'bcprov-jdk15', 'bcpg-jdk15', 'bcprov-jdk14', 'bcmail-jdk14'}
-
-            compile 'org.postgresql:postgresql:9.2-1003-jdbc4'
-
-        }
     }
 
     dependencies {
-        // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes e.g.
-        // runtime 'mysql:mysql-connector-java:5.1.24'
+        // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided'
+
+        compile(
+                'org.votingsystem:votingsystemlibrary:0.2.0',
+                'org.codehaus.groovy.modules.http-builder:http-builder:0.5.1',
+                'org.apache.httpcomponents:httpmime:4.2.4',
+                'org.apache.httpcomponents:httpclient:4.2.4',
+                'org.bouncycastle:bcprov-jdk16:1.46',
+                'org.bouncycastle:bcmail-jdk16:1.46',
+                'org.bouncycastle:bcpg-jdk16:1.46',
+                'org.bouncycastle:bctsp-jdk16:1.46',
+                'javax.mail:mail:1.4.7',
+        ) {excludes "slf4j-api", "log4j", "commons-logging", "xalan", "xml-apis", "groovy","commons-io",
+                'bcprov-jdk15', 'bcpg-jdk15', 'bcprov-jdk14', 'bcmail-jdk14'}
+
+        runtime 'org.postgresql:postgresql:9.3-1101-jdbc41'
+
+        compile ("org.springframework:spring-orm:$springVersion", "org.springframework:spring-expression:$springVersion",
+                "org.springframework:spring-aop:$springVersion")
     }
 
     plugins {
         // plugins for the build system only
-        build ":tomcat:7.0.47"
+        build ":tomcat8:8.0.5"
 
         // plugins for the compile step
-        compile ":scaffolding:2.0.1"
-        compile ':cache:1.1.1'
+        compile ":scaffolding:2.1.0"
+        compile ':cache:1.1.6'
+        compile ":asset-pipeline:1.8.7"
 
         // plugins needed at runtime but not for compilation
-        runtime ":hibernate4:4.1.11.4" // or ":hibernate:3.6.10.4"
-        //runtime ":database-migration:1.3.8"
-        runtime ":resources:1.2.1"
-        // Uncomment these (or add new ones) to enable additional resources capabilities
-        //runtime ":zipped-resources:1.0.1"
-        //runtime ":cached-resources:1.1"
-        //runtime ":yui-minify-resources:0.1.5"
+        runtime ":hibernate4:4.3.5.3" // or ":hibernate:3.6.10.15"
+        runtime ":database-migration:1.4.0"
+        runtime ":jquery:1.11.1"
+
+        // Uncomment these to enable additional asset-pipeline capabilities
+        //compile ":sass-asset-pipeline:1.7.4"
+        //compile ":less-asset-pipeline:1.7.0"
+        //compile ":coffee-asset-pipeline:1.7.0"
+        //compile ":handlebars-asset-pipeline:1.3.0.3"
     }
 }
+grails.tomcat.jvmArgs = [ '-Xmx512m', '-XX:MaxPermSize=256m' ]
+
